--- a/src/components/Contact/InquiryForm/InquiryForm.css
+++ b/src/components/Contact/InquiryForm/InquiryForm.css
@@ -18,6 +18,12 @@
 }
 
 
+.contactBlock{
+    margin-bottom: 10%;
+    margin-top: 5%;
+    padding: 4%;
+}
+
 .enter-message{
     transition: transform 0.6s ease, background-color 0.9s ease; 
 }
