--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -45,9 +45,13 @@
 
 .aboutMe{
     /* border: 3pt solid blue; */
-    margin-top: -3%;
+    /* margin-top: -3%; */
+    
 }
 
 .aboutMe img{
-    height: 70%;
+    margin-top: -9%;
+    height: 80%;
+    width: 70%;
+    margin-left: 20%;
 }
