--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -1,12 +1,26 @@
 .service-section {
     height: 70vh; /* Adjust height as needed */
-    background-image: url('../../assets/serviceBg.jpg');
-    opacity: 0.8;
+    /* background-image: url('../../assets/serviceBg.jpg'); */
+
     background-size: cover;
     background-position: center;
 }
 
 .carosuelBox{
-    margin-bottom: 10%;
-    margin-top: 3%;
+    /* margin-bottom: 12%; */
+    
+    padding: 2%;
+    width: 100%;
+    
+}
+
+.carousel img{
+    border-radius: 20%;
+}
+
+.Services{
+    background-image: url('../../assets/serviceBg2.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+
 }
