--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,13 +1,14 @@
-.container{
+/* .container{
 
     padding: 3%;
     background-image: url('../../assets/portfolioBg.webp');
     background-size: contain;
        
-}
+} */
 
 .block2{
     
     padding: 3%;
     background-image: url('../../assets/portfolioBg.webp');
+    background-attachment: fixed;
 }
