--- a/src/components/Career/Caree.css
+++ b/src/components/Career/Caree.css
@@ -1,8 +1,8 @@
-.career-container {
+/* .career-container {
     max-width: 600px;
     margin: 0 auto;
     padding: 25%;
-  }
+  } */
   
   .career-title {
     font-size: 24px;
@@ -54,10 +54,13 @@
   }
   
   .career-container {
-    max-width: 1200px;
+    padding: 5%;
     margin: 0 auto;
-    padding: 20px;
-  }
+    
+    background-image: url('../../assets/careerBg.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+}
   
   .career-content {
     display: flex;
