--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -38,9 +38,10 @@
 
 .about-section {
     height: 70vh; /* Adjust height as needed */
-    background-image: url('../../assets/about.jpg');
+    background-image: url('../../assets/aboutBg.jpg');
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
 }
 
 .aboutMe{
