--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,5 +1,7 @@
 .contact{
     background-image: url('../../assets/contact2.jpg');
+    margin-top: -5%;
+    height: auto;
 }
 
   .background h3 {
