--- a/src/components/Contact/InquiryForm/InquiryForm.css
+++ b/src/components/Contact/InquiryForm/InquiryForm.css
@@ -1,5 +1,8 @@
 .enter-name{
     transition: transform 0.6s ease, background-color 0.9s ease; 
+    border: none;
+    border-bottom: 1px solid gray;
+    border-radius: 0%;
 }
 
 .enter-name:hover{
@@ -10,6 +13,9 @@
 
 .enter-email{
     transition: transform 0.6s ease, background-color 0.9s ease; 
+    border: none;
+    border-bottom: 1px solid gray;
+    border-radius: 0%;
 }
 
 .enter-email:hover{
@@ -26,6 +32,9 @@
 
 .enter-message{
     transition: transform 0.6s ease, background-color 0.9s ease; 
+    border: none;
+    border-bottom: 1px solid gray;
+    border-radius: 0%;
 }
 
 .enter-message:hover{
@@ -35,6 +44,9 @@
 
 .enter-phone{
     transition: transform 0.6s ease, background-color 0.9s ease; 
+    border: none;
+    border-bottom: 1px solid gray;
+    border-radius: 0%;
 }
 
 .enter-phone:hover{
@@ -42,6 +54,3 @@
     background-color: rgb(107, 98, 240);
 }
 
-.form-title{
-    font-weight: bold;
-}
