--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,5 @@
 .home{
-  background-image: url('../../assets/homeBgif2.gif');
+  background-image: url('../../assets/homeBg.jpg');
   background-attachment: fixed;
   background-size: cover;
 }
