--- a/src/components/Navbar/NAv.css
+++ b/src/components/Navbar/NAv.css
@@ -10,6 +10,9 @@ li:hover{
     transition: transform 0.3s ease;
 }
 
+.serviceBlock{
+margin-top: 7%;
+}
 .serviceBlock:hover{
     transform: none;
 }
