--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,7 +1,7 @@
 .container{
 
     padding: 3%;
-    background-image: url('../../assets/homeBgif.gif');
+    /* background-image: url('../../assets/homeBgif.gif'); */
     background-size: cover;
     width: 100%;
        
