--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -38,6 +38,13 @@
 
 .about-section {
     height: 70vh; /* Adjust height as needed */
+    background-image: url('../../assets/aboutBg2.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+.missonVision{
     background-image: url('../../assets/aboutBg.jpg');
     background-size: cover;
     background-position: center;
