--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -22,5 +22,6 @@
     background-image: url('../../assets/serviceBg2.jpg');
     background-size: cover;
     background-attachment: fixed;
+    background-position: center;
 
 }
