--- a/src/components/Services/Inno Services/DigitalMarket.css
+++ b/src/components/Services/Inno Services/DigitalMarket.css
@@ -6,3 +6,18 @@
 .AppBg{
     opacity: 0.5;
 }
+#DigitalDiv{
+    background-image: url('../../../assets/digiHero.webp');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+}
+
+
+@media (max-width: 640px) {#DigitalDev{
+    
+    background-image: url('../../../assets/digiHero.webp');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+}}
