--- a/src/components/Services/Inno Services/SocialMedia.css
+++ b/src/components/Services/Inno Services/SocialMedia.css
@@ -6,3 +6,19 @@
 .AppBg{
     opacity: 0.5;
 }
+
+#SocialMediaDiv{
+    background-image: url('../../../assets/socialHero.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+}
+
+
+@media (max-width: 640px) {#SocialMediaDiv{
+    
+    background-image: url('../../../assets/socialHero.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+}}
