--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -2,4 +2,5 @@
   background-image: url('../../assets/homeBg.jpg');
   background-attachment: fixed;
   background-size: cover;
+  height: 100vh;
 }
