--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,3 +4,9 @@
   background-size: cover;
   height: 100vh;
 }
+
+.ServicesMission{
+  background-image: url('../../assets/homeBg.jpg');
+  background-attachment: fixed;
+  background-size: cover;
+}
